tests/parsing-test/test_out/one-line-struct.txt
error: scope item not found
 --> one-line-struct/root.ctl:1:52
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |                                                    ^^^^^^ this does not exist or is not imported
  |
  = help: expected type or module
  = info: debug: queried 'Trough'

error: scope item not found
 --> one-line-struct/root.ctl:1:75
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |                                                                           ^^^^^^^^^^^ this does not exist or is not imported
  |
  = help: expected type or module
  = info: debug: queried 'SimpleStuff'

error: scope item not found
 --> one-line-struct/root.ctl:1:116
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |                                                                                                                    ^^^ this does not exist or is not imported
  |
  = help: expected type or module
  = info: debug: queried 'int'

info: formatted:
 pub struct OneLineStruct {
	pub use mut filed: Trough
	other_field: SimpleStuff
	priv pointer: ^mut ^int
}

